docker compose for client part